# IP

./: .gitignore  CMakeLists.txt  Generic Buffer Documentation.json  README.md
paho.mqtt.cpp/src/samples/: .cproject  sync_consume.cpp  sync_publish.cpp
src/: AirPurifier.cpp  AirPurifier.h  MqttClientHandler.cpp  air-purifier  libpistache.so.0.0  log.txt  main.cpp  makefile  microwave  mqttPublisher.cpp
src/include/: AirPurifier.cpp  AirPurifier.h  MqttClientHandler.h
